<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/options"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/ViewRecipeViewEmail"
                android:showAsAction="always"
                android:title="@string/email"/>
            <item
                android:id="@+id/ViewRecipeViewUpload"
                android:showAsAction="always"
                android:title="@string/upload"/>
            <item
                android:id="@+id/ViewRecipeViewEdit"
                android:showAsAction="always"
                android:title="@string/modify"/>
            <item
                android:id="@+id/ViewRecipeViewDelete"
                android:showAsAction="always"
                android:title="@string/buttonDelete"/>
        </menu>
    </item>

</menu>