<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <MultiAutoCompleteTextView
        android:id="@+id/addNewRecipeInstructionDialogEditText"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_above="@+id/addNewRecipeInstructionDialogCancel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences" >

    </MultiAutoCompleteTextView>

    <Button
        android:id="@+id/addNewRecipeInstructionDialogDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="138dp"
        android:text="@string/buttonDelete" />

    <Button
        android:id="@+id/addNewRecipeInstructionDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addNewRecipeInstructionDialogDelete"
        android:layout_alignBottom="@+id/addNewRecipeInstructionDialogDelete"
        android:layout_toRightOf="@+id/addNewRecipeInstructionDialogDelete"
        android:text="@string/cancelButton" />

    <Button
        android:id="@+id/addNewRecipeInstructionDialogConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addNewRecipeInstructionDialogCancel"
        android:layout_alignBottom="@+id/addNewRecipeInstructionDialogCancel"
        android:layout_toRightOf="@+id/addNewRecipeInstructionDialogCancel"
        android:text="@string/addNewInstructionButtonString" />

</RelativeLayout>